# consequence

./: .dockerignore  .gitignore  Dockerfile  README.md  architecture.md  docker-compose.yml  jobs_db.json  pom.xml  pyproject.toml
.github/workflows/: ci-java.yml  ci-python.yml  ci.yml
cli-java/: Dockerfile  pom.xml
cli-java/src/main/java/com/consequence/: ConsequenceApplication.java
cli-java/src/main/resources/: application.yml
copilot_cli/: __init__.py  api_client.py  main.py
docs/: architecture.md  python-evaluator.md
eval/: agent.py  llm_evaluator.py
eval/runners/: agent_runner.py  judge_runner.py
eval/servers/: __init__.py  calculator.py
eval/suites/: calculator.py
evals/: __init__.py
evaluator/: api.py  main.py  metrics.py  orchestrator.py  registry.py  reporter.py
evaluator-python/: Dockerfile  pyproject.toml
evaluator-python/src/consequence/: agent.py  cli.py  eval.py  llm_evaluator.py
evaluator-python/src/consequence/servers/: __init__.py  calculator.py  database.py
evaluator/transport/: sse.py
scripts/: run_cpu_demo.sh
src/consequence/: __init__.py  agent.py  cli.py  eval.py  metrics.py  reporter.py  types.py
src/consequence/evals/: __init__.py  calculator.py  database.py
src/main/java/com/consequence/cli/: EvalCommands.java
src/main/java/com/consequence/config/: AppConfig.java
src/main/java/com/consequence/model/: AgentRequest.java  AgentResponse.java  EvalReport.java
src/main/resources/: sample-eval.json
src/test/java/com/consequence/: ConsequenceApplicationTests.java
tests/: test_eval.py  test_metrics.py  test_orchestration.py
(+7 files in other folders)
