[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consequence"
version = "0.1.0"
description = "MCP-backed agent evaluation framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.0",
    "openai>=1.50.0",
    "pydantic>=2.11.3",
    "anyio>=4.9.0",
    "rich>=13.9.4",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "prompt_toolkit>=3.0.43",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[project.scripts]
consequence = "evaluator.main:main"
consequence-copilot = "copilot_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["evaluator", "eval", "copilot_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
