[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consequence"
version = "0.1.0"
description = "MCP-backed agent evaluation framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.0",
    "anthropic>=0.96.0",
    "pydantic>=2.11.3",
    "anyio>=4.9.0",
    "rich>=13.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[project.scripts]
consequence = "consequence.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/consequence"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
